# wgpu-gui-bridge

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  sync-latest-release.yml  sync-main-lts-release.yml
demo-servo-gpui/fixtures/: static.html
demo-servo-iced/: build.rs
demo-servo-winit/src/: main.rs
demo-wry-winit/: Cargo.toml  README.md
demo-wry-winit/src/: main.rs
servo-wgpu-interop-adapter/: Cargo.toml  README.md
servo-wgpu-interop-adapter/src/: lib.rs
wgpu-native-texture-interop/: Cargo.toml
wgpu-native-texture-interop/src/: error.rs  lib.rs
wgpu-native-texture-interop/src/raw_gl/: angle_d3d11.rs  mod.rs
wgpu-native-texture-interop/src/surfman_gl/: windows.rs
wry-wgpu-interop-adapter/: Cargo.toml  README.md
wry-wgpu-interop-adapter/src/: lib.rs  webkitgtk_producer.rs  webview2_composition_producer.rs  windows_capture.rs  wkwebview_producer.rs
