[workspace]
members = [
    "demo-raw-gl",
    "demo-servo-gpui",
    "demo-servo-iced",
    "demo-servo-winit",
    "demo-servo-xilem",
    "demo-wry-winit",
    "wry-wgpu-interop-adapter",
    "wgpu-native-texture-interop",
    "servo-wgpu-interop-adapter",
]
resolver = "3"

# gpui 0.2.2 pins taffy =0.9.0; servo-layout requires ^0.9.2.
# This patch changes gpui's taffy dep to 0.9.2 so both can coexist.
#
# serde_fmt 1.1.0 adds `impl From<serde_fmt::Error> for std::fmt::Error`.
# On Rust 1.92 this creates an ambiguous `From` resolution in stylo's
# `ToCss` derive macro (E0282/E0283). The patch removes that impl.
[patch.crates-io]
gpui = { path = "patches/gpui" }
serde_fmt = { path = "patches/serde_fmt" }

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mark-ik/wgpu-gui-bridge"
version = "0.1.0"
