[package]
name = "servo-wgpu-interop-adapter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mark-ik/wgpu-gui-bridge"
description = "Servo-specific offscreen rendering adapter built on wgpu-native-texture-interop"

[features]
default = []
servo = ["dep:servo"]

[dependencies]
euclid = "0.22.11"
gleam = "0.15.1"
glow = "0.17.0"
image = "0.25"
rustls = "0.23.37"
surfman = { version = "0.12.0", features = ["chains"] }
thiserror = "2.0.17"
dpi = "0.1.2"
winit = "0.30.13"
wgpu = { version = "29.0.1", features = ["metal"] }
wgpu-native-texture-interop = { path = "../wgpu-native-texture-interop" }
servo = { version = "0.1.0", optional = true }
